[gd_scene load_steps=10 format=3 uid="uid://djp1l5xc1n276"]

[ext_resource type="Script" uid="uid://qidpitn27k6i" path="res://Scripts/game_scene.gd" id="1_ea41f"]
[ext_resource type="PackedScene" uid="uid://2x6d0cgow3be" path="res://Scenes/player.tscn" id="1_ra74b"]
[ext_resource type="PackedScene" uid="uid://3t7c0x5h45ve" path="res://Scenes/enemy.tscn" id="2_vgbve"]
[ext_resource type="PackedScene" uid="uid://c1sxjhf73yk6w" path="res://Scenes/enemy_triangle.tscn" id="3_ly6gv"]
[ext_resource type="FontFile" uid="uid://bd8eo6wiwrb8e" path="res://Fonts/LuckyGuy/LuckiestGuy-Regular.ttf" id="6_36pvn"]
[ext_resource type="Theme" uid="uid://b7r68te2rhvr" path="res://Themes/game_over_buttons.tres" id="7_3fljv"]
[ext_resource type="AudioStream" uid="uid://bhwjo6df5uopq" path="res://SoundsAndMusic/level-up-sfx.mp3" id="7_vdy4y"]
[ext_resource type="Theme" uid="uid://4ml17w5pppe6" path="res://Themes/pause_buttons.tres" id="8_srkse"]

[sub_resource type="Curve2D" id="Curve2D_ra74b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1152, -3, 0, 0, 0, 0, 1151, 647, 0, 0, 0, 0, 2, 640, 0, 0, 0, 0, 0, 2)
}
point_count = 5

[node name="GameScene" type="Node2D"]
script = ExtResource("1_ea41f")
enemies = Array[PackedScene]([ExtResource("2_vgbve"), ExtResource("3_ly6gv")])

[node name="Background" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -391.0
offset_top = -780.0
offset_right = 1609.0
offset_bottom = 1220.0
grow_vertical = 2
color = Color(0.56970286, 0.80423176, 0.4942581, 1)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Player" parent="." instance=ExtResource("1_ra74b")]
player_speed = 600

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ra74b")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(0, 2)
rotation = -0.0043402505

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DifficultIncreaserTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="GameCanvas" type="CanvasLayer" parent="."]

[node name="WaveLabel" type="RichTextLabel" parent="GameCanvas"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_right = 76.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("6_36pvn")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
text = "Wave: 0"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="GameCanvas"]
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTxt" type="RichTextLabel" parent="GameCanvas/GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_right = 260.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_colors/default_color = Color(1, 0.19, 0.19, 1)
theme_override_fonts/normal_font = ExtResource("6_36pvn")
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "[wave amp=50]Game Over[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveScore" type="RichTextLabel" parent="GameCanvas/GameOverPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BtnVBox" type="VBoxContainer" parent="GameCanvas/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -109.0
offset_right = 188.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="PlayAgainBtn" type="Button" parent="GameCanvas/GameOverPanel/BtnVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("7_3fljv")
text = "Play Again"

[node name="BackToMenuBtn" type="Button" parent="GameCanvas/GameOverPanel/BtnVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("7_3fljv")
text = "Go Back To Menu"

[node name="PauseMenu" type="Panel" parent="GameCanvas"]
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTxt" type="RichTextLabel" parent="GameCanvas/PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_right = 260.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_colors/default_color = Color(1, 0.93249995, 0.19, 1)
theme_override_fonts/normal_font = ExtResource("6_36pvn")
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "[wave amp=50]Paused[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveScore" type="RichTextLabel" parent="GameCanvas/PauseMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BtnVBox" type="VBoxContainer" parent="GameCanvas/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -109.0
offset_right = 188.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="ResumeBtn" type="Button" parent="GameCanvas/PauseMenu/BtnVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("8_srkse")
text = "Resume"

[node name="BackToMenuBtnPause" type="Button" parent="GameCanvas/PauseMenu/BtnVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("8_srkse")
text = "Go Back To Menu"

[node name="WaveUpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vdy4y")
bus = &"SFX"

[connection signal="on_game_over" from="Player" to="." method="_on_player_on_game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="DifficultIncreaserTimer" to="." method="_on_difficult_increaser_timer_timeout"]
[connection signal="pressed" from="GameCanvas/GameOverPanel/BtnVBox/PlayAgainBtn" to="." method="_on_play_again_btn_pressed"]
[connection signal="pressed" from="GameCanvas/GameOverPanel/BtnVBox/BackToMenuBtn" to="." method="_on_back_to_menu_btn_pressed"]
[connection signal="pressed" from="GameCanvas/PauseMenu/BtnVBox/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="GameCanvas/PauseMenu/BtnVBox/BackToMenuBtnPause" to="." method="_on_back_to_menu_btn_pause_pressed"]
